--- a/index.html
+++ b/index.html
@@ -270,8 +270,7 @@
                         </div>
                     </div>
                 </div>
-                <form class="contact-form glass-card" id="contact-form"
-                    action="https://formspree.io/f/rv367629@gmail.com" method="POST">
+                <form class="contact-form glass-card" id="contact-form">
                     <div class="form-group"><label for="name">Your Name</label><input type="text" id="name" name="name"
                             placeholder="John Doe" required></div>
                     <div class="form-group"><label for="email">Your Email</label><input type="email" id="email"
